Add support for dynamic CORS origins via environment variables
Enhancement: Allow frontend to access from public URLs (ngrok,
cloudflare tunnel, production domains) while maintaining security.

Changes:
- Add @Value injection for cors.allowed-origins property
- Parse comma-separated origins from environment variable
- Merge custom origins with default localhost origins
- Maintain localhost origins for development convenience
- Add comprehensive CORS configuration documentation

Usage:
1. For development: No changes needed (localhost works automatically)
2. For public URLs: Set CORS_ALLOWED_ORIGINS environment variable
   Example: export CORS_ALLOWED_ORIGINS="https://ngrok-url.app,https://domain.com"
3. Or add to application.properties:
   cors.allowed-origins=https://ngrok-url.app,https://domain.com

Security:
- Still complies with CORS spec (no wildcards with credentials)
- Only explicitly specified origins are allowed
- Duplicates are automatically filtered

Documentation:
- Added BE/CORS_CONFIGURATION.md with detailed setup guide
- Includes examples for ngrok, cloudflare tunnel, production
- Troubleshooting section for common issues